Базовые ручки для тестов.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-.idea
-.env
+# Игнорировать системные файлы
+.DS_Store
+Thumbs.db
+
+# Игнорировать папки с зависимостями
+node_modules/
+venv/
+.env/
+config/.env
+# Игнорировать файлы логов
+*.log
+
+# Игнорировать файлы настроек IDE
+.idea/
+.vscode/
+
+# Игнорировать скомпилированные файлы Python
+__pycache__/
+*.pyc
+
+# Игнорировать временные файлы
+*.tmp
+*.swp
+
+# Исключение - не игнорировать файл с таким именем
+!important.txt
